adjust layout of about-me content, remove glow on scrollbar due to bugs

--- a/styles.css
+++ b/styles.css
@@ -51,7 +51,7 @@ header {
     margin-right: 2rem;
 }
 
-.navbar nav > a, .slider-nav a {
+.navbar nav > a {
     padding: 0.5rem;
     color: var(--text-color);
     font-size: 1.3rem;
@@ -60,7 +60,7 @@ header {
     text-transform: uppercase;
 }
 
-.navbar nav > a:hover, .slider-nav a:hover {
+.navbar nav > a:hover, .about-nav > a:hover {
     color: var(--accent-color);
 }
 
@@ -73,7 +73,7 @@ header {
     box-shadow: 1px 1px 30px var(--accent-color);
 }
 
-/* About me Section */
+/* Hero section */
 
 #about-hero {
     display: flex;
@@ -105,29 +105,74 @@ header {
     border: 5px inset;
 }
 
-/* about w/ slider */
+/* About me slider */
 
 #about-content {
     margin-left: 0.5rem;
     margin-right: 0.5rem;
     background-color: var(--primary-color);
+}
+
+.about-wrapper {
+    position: relative;
+    max-width: 80rem;
+    margin: 0 auto;
+    padding-top: 2rem;
+}
+
+.about-nav {
     display: flex;
-    overflow-x: hidden;
-    scroll-behavior: smooth; 
+    justify-content: center;
+    z-index: 1;
+
+    background-color: var(--secondary-color);
+    border-bottom: 0.1rem inset var(--primary-color);
+}
+
+.about-nav a {
+    max-height: 2.5rem;
+    max-width: 10rem;
+    text-align: center;
+    align-content: center;
+    
+    font-size: 1rem;
+    font-weight: bolder;
+    font-family: "Poppins", sans-serif;
+    text-transform: uppercase;
+
+    flex-shrink: 1;
+    flex-basis: 100%;
+    padding-top: 0.5rem;
+    border: 0.1rem outset var(--primary-color);
+}
+
+.about-nav a:active{
+    background-color: var(--accent-color);
+    color: var(--primary-color)
+}
+
+.slide-wrapper {
+    display: flex;
+    /* aspect-ratio: 16 / 9; */
+    overflow-x: auto;
     scroll-snap-type: x mandatory;
-    min-height: 45rem;
-    border-radius: 25px;
- 
+    scroll-behavior: smooth;
+    scrollbar-width: none;
+    min-height: 35rem;
+    
 }
 
 .slide {
     flex: 1 0 100%;
-    text-align: center;
-    align-content: center;
-    padding: 3rem;
-    background-color: var(--secondary-color);
+    scroll-snap-align: start;
+
     display: flex;
     flex-wrap: wrap;
+
+    padding: 2rem;
+    background-color: var(--secondary-color);
+    text-align: center;
+    align-content: center;
 }
 
 /* Projects Section */
@@ -148,8 +193,8 @@ header {
 .projects-container {
     display: flex;
     max-width: 100%;
-    justify-content: space-around;
-    gap: 1rem;
+    justify-content: space-between;
+    gap: 2rem;
     padding: 2rem;
     overflow-x: scroll;
     scroll-snap-type: x mandatory;
@@ -172,8 +217,8 @@ header {
 /* scroll bar customization */
 
 html ::-webkit-scrollbar {
-    width: 0.5rem;
-    height: 0.5rem;
+    width: 0.7rem;
+    height: 0.7rem;
 }
   
   /* Track */
@@ -186,12 +231,18 @@ html ::-webkit-scrollbar-thumb {
     background: var(--accent-color); 
 }
 
-/* Handle on hover */
-html ::-webkit-scrollbar-thumb:hover {
-    box-shadow: 1px 1px 10px var(--accent-color);
+/* media query to adjust the ff on smaller screens:
+    -#about-hero img
+    -.hero-text
+    -.navbar nav > a
+    -.about-nav a
+
+*/
+
+@media screen and (max-width: 375px) {
+    #about-hero > img {
+        max-width: 20rem;    
+        margin-top: 5rem;
+    }
 }
 
-/* media query to adjust the ff on smaller screens:
-    -hero section
-    
-*/
